SERVER-60084 Fix clang related compile failure in Enterprise Ldap

GitOrigin-RevId: 31e38d31e7efb7d02d5e46f87ec878d0ef3b3a51